# wq-app

./: .commit-msg.txt  .gitattributes  .gitignore  .prettierignore  .prettierrc  .sqlfluff  .sqlfluffignore  README.md  SUPABASE_GAME_SCHEMA_CHANGES.md  client.http  eslint.config.js  generate_repo_index.py  index.html  package-lock.json  package.json  requirements-dev.txt  tsconfig.app.json  vite.config.ts
.claude/: clean-code-convention.md  commit-message.md  deep-research-report-yoopta-editor.md  named-export-conventions.md  repo.index.md  ui-registry.md
.cursor/: mcp.json
.husky/: pre-commit
auto-scoring-worker/: README.md  pyproject.toml  requirements.txt
auto-scoring-worker/app/: main.py
auto-scoring-worker/app/auto_scoring/: constants.py  embedding_model.py  pipeline.py  router.py  schemas.py
auto-scoring-worker/app/tests/unit/auto_scoring/: test_pipeline.py
docs/: 01_Super_Admin.md  02_Institution.md  03_Teacher.md  04_Student.md  05_Class_Room.md  06_Note.md  07_Course.md  08_Game_Studio.md  09_Task.md  10_Reward_System.md  11_Chat.md  12_Notification.md  13_Hetzner_Infra.md  14_Subscription_and_Entitlements.md  15_Platform_Roles_and_Schema_Map.md  16_Role_Flow_Diagrams.md  README.md  chagpt_lexical_deep_research.md  db_guide_line_en.md  instructions.md  teacher_student_onboarding_flow.md
grading-worker/: pyproject.toml  requirements.txt
pdf_auto_transfer/: .env.example  extractor.py  main.py  mapper.py  requirements.txt  schemas.py
public/: site.webmanifest
scripts/: backfill-inline-media-links.ts  check_sql_naming.py  generate_repo_index.py  (+1 more)
(+2900 files in other folders)
