[project]
name = "wq-auto-scoring-worker"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",

    # Part A — Automatic Short-Answer Scoring (PMC12171532)
    "nltk==3.8.1",
    "scikit-learn==1.3.2",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "sentence-transformers",
    "torch",
]
